[UPGRADE] saving work in progress