@@ -64,8 +64,8 @@
     </developers>
 
     <properties>
-        <micronaut.version>2.5.13</micronaut.version>
-        <jdk.version>13</jdk.version>
+        <micronaut.version>4.8.0</micronaut.version>
+        <jdk.version>21</jdk.version>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -73,19 +73,19 @@
         <exec.mainClass>org.breedinginsight.api.Application</exec.mainClass>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version> <!-- 2.22.2 -->
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
-        <jvm.options>-Xmx1024m -XX:MaxPermSize=256m --enable-preview</jvm.options>
+        <jvm.options>-Xmx1024m -XX:MaxPermSize=256m</jvm.options>
 
-        <jooq.version>3.16.3</jooq.version>
+        <jooq.version>3.19.18</jooq.version>
         <postgres.version>42.3.8</postgres.version>
         <logback.version>1.2.10</logback.version>
-        <lombok.version>1.18.22</lombok.version>
+        <lombok.version>1.18.36</lombok.version>
         <gson.version>2.8.9</gson.version>
         <geojson-jackson.version>1.14</geojson-jackson.version>
         <apache-commons-csv.version>1.9.0</apache-commons-csv.version>
         <apache-commons-lang.version>3.12.0</apache-commons-lang.version>
         <testcontainers.version>1.16.3</testcontainers.version>
         <!-- Version of flyway dependent on version of micronaut -->
-        <flyway.version>7.7.3</flyway.version>
+<!--        <flyway.version>9.8.1</flyway.version>-->
         <guava.version>31.0.1-jre</guava.version>
         <okhttp.version>4.9.3</okhttp.version>
         <mockito.version>4.3.1</mockito.version>
@@ -93,7 +93,7 @@
         <tika-app.version>2.9.2</tika-app.version>
         <!-- Hard-coded version of transitive dependency commons compress seems to be needed. -->
         <commons-compress.version>1.26.1</commons-compress.version>
-        <javaxmail.version>1.6.2</javaxmail.version>
+        <jakarta.mail.version>2.0.1</jakarta.mail.version>
         <st4.version>4.3.1</st4.version>
         <tablesaw.version>1.0.0-SNAPSHOT</tablesaw.version>
         <alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
@@ -170,8 +170,8 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>io.micronaut</groupId>
-                <artifactId>micronaut-bom</artifactId>
+                <groupId>io.micronaut.platform</groupId>
+                <artifactId>micronaut-platform</artifactId>
                 <version>${micronaut.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
@@ -191,7 +191,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.micronaut</groupId>
+            <groupId>io.micronaut.validation</groupId>
             <artifactId>micronaut-validation</artifactId>
             <scope>compile</scope>
         </dependency>
@@ -201,10 +201,21 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>io.micronaut.rxjava3</groupId>
+            <artifactId>micronaut-rxjava3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
             <scope>compile</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>jakarta.inject</groupId>-->
+<!--            <artifactId>jakarta.inject-api</artifactId>-->
+<!--            <version>2.0.1</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>io.micronaut.sql</groupId>
             <artifactId>micronaut-jdbc-hikari</artifactId>
@@ -237,6 +248,19 @@
             <groupId>io.micronaut.security</groupId>
             <artifactId>micronaut-security-oauth2</artifactId>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micronaut</groupId>
+            <artifactId>micronaut-jackson-databind</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+<!--        https://micronaut.io/2023/02/19/micronaut-framework-4-0-and-snakeyaml-transitive-dependency/-->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -323,7 +347,11 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>${flyway.version}</version>
+<!--            <version>${flyway.version}</version>-->
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -389,7 +417,12 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
-            <version>${javaxmail.version}</version>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>${jakarta.mail.version}</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -442,6 +475,7 @@
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
+                <version>1.2.1</version>
                 <artifactId>properties-maven-plugin</artifactId>
                 <executions>
                     <execution>
@@ -492,7 +526,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
+                <version>3.5.0</version>
                 <configuration>
                     <executable>java</executable>
                     <arguments>
@@ -514,85 +548,86 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
-        <plugin>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq-codegen-maven</artifactId>
-            <version>${jooq.version}</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>generate</goal>
-                    </goals>
-                </execution>
-            </executions>
+            <plugin>
+                <groupId>org.jooq</groupId>
+                <artifactId>jooq-codegen-maven</artifactId>
+                <version>${jooq.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
 
-            <configuration>
-                <jdbc>
-                    <driver>org.postgresql.Driver</driver>
-                    <url>jdbc:postgresql://${DB_SERVER}/${DB_NAME}</url>
-                    <user>${DB_USER}</user>
-                    <password>${DB_PASSWORD}</password>
-                </jdbc>
-                <generator>
-                    <name>org.breedinginsight.generation.JooqDaoGenerator</name>
-                    <database>
-                        <name>org.jooq.meta.postgres.PostgresDatabase</name>
-                        <includes>.*</includes>
-                        <inputSchema>public</inputSchema>
-                        <includeTables>true</includeTables>
-                        <includeUDTs>true</includeUDTs>
-                        <includeRoutines>false</includeRoutines>
-                        <includePrimaryKeys>true</includePrimaryKeys>
-                        <includeUniqueKeys>true</includeUniqueKeys>
-                        <includeForeignKeys>true</includeForeignKeys>
-                        <includeCheckConstraints>true</includeCheckConstraints>
-                        <includeIndexes>false</includeIndexes>
-                        <excludes>
-                            flyway_schema_history|base_entity|base_track_edit_entity|spatial_ref_sys
-                        </excludes>
-                    </database>
+                <configuration>
+                    <jdbc>
+                        <driver>org.postgresql.Driver</driver>
+                        <url>jdbc:postgresql://${DB_SERVER}/${DB_NAME}</url>
+                        <user>${DB_USER}</user>
+                        <password>${DB_PASSWORD}</password>
+                    </jdbc>
+                    <generator>
+                        <name>org.breedinginsight.generation.JooqDaoGenerator</name>
+                        <database>
+                            <name>org.jooq.meta.postgres.PostgresDatabase</name>
+                            <includes>.*</includes>
+                            <inputSchema>public</inputSchema>
+                            <includeTables>true</includeTables>
+                            <includeUDTs>true</includeUDTs>
+                            <includeRoutines>false</includeRoutines>
+                            <includePrimaryKeys>true</includePrimaryKeys>
+                            <includeUniqueKeys>true</includeUniqueKeys>
+                            <includeForeignKeys>true</includeForeignKeys>
+                            <includeCheckConstraints>true</includeCheckConstraints>
+                            <includeIndexes>false</includeIndexes>
+                            <excludes>
+                                flyway_schema_history|base_entity|base_track_edit_entity|spatial_ref_sys
+                            </excludes>
+                        </database>
 
-                    <strategy>
-                        <matchers>
-                            <tables>
-                                <table>
-                                    <pojoClass>
-                                        <transform>PASCAL</transform>
-                                        <expression>$0_ENTITY</expression>
-                                    </pojoClass>
-                                    <tableClass>
-                                        <transform>PASCAL</transform>
-                                        <expression>$0_TABLE</expression>
-                                    </tableClass>
-                                </table>
-                            </tables>
-                        </matchers>
-                    </strategy>
+                        <strategy>
+                            <matchers>
+                                <tables>
+                                    <table>
+                                        <pojoClass>
+                                            <transform>PASCAL</transform>
+                                            <expression>$0_ENTITY</expression>
+                                        </pojoClass>
+                                        <tableClass>
+                                            <transform>PASCAL</transform>
+                                            <expression>$0_TABLE</expression>
+                                        </tableClass>
+                                    </table>
+                                </tables>
+                            </matchers>
+                        </strategy>
 
-                    <target>
-                        <packageName>org.breedinginsight.dao.db</packageName>
-                        <directory>target/generated-sources/jooq</directory>
-                    </target>
-                    <generate>
-                        <pojos>true</pojos>
-                        <daos>true</daos>
-                        <fluentSetters>false</fluentSetters>
-                        <javaTimeTypes>true</javaTimeTypes>
-                    </generate>
-                </generator>
-            </configuration>
-            <dependencies>
-                <dependency>
-                    <groupId>org.breedinginsight</groupId>
-                    <artifactId>bi-jooq-codegen</artifactId>
-                    <version>${jooq.version}</version>
-                </dependency>
-            </dependencies>
-        </plugin>
+                        <target>
+                            <packageName>org.breedinginsight.dao.db</packageName>
+                            <directory>target/generated-sources/jooq</directory>
+                        </target>
+                        <generate>
+                            <pojos>true</pojos>
+                            <daos>true</daos>
+                            <fluentSetters>false</fluentSetters>
+                            <javaTimeTypes>true</javaTimeTypes>
+                        </generate>
+                    </generator>
+                </configuration>
+                <dependencies>
+                    <dependency>
+<!--                        TODO: update to BI dependency-->
+                        <groupId>mlm483</groupId>
+                        <artifactId>bi-jooq-codegen</artifactId>
+                        <version>${jooq.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         <plugin>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-maven-plugin</artifactId>
-            <version>${flyway.version}</version>
+<!--            <version>${flyway.version}</version>-->
             <configuration>
                 <url>jdbc:postgresql://${DB_SERVER}/${DB_NAME}</url>
                 <user>${DB_USER}</user>
@@ -666,15 +701,13 @@
                         </execution>
                     </executions>
                 </plugin>
+<!--                TODO: Does this plugin work?-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
                     <configuration>
-                        <compilerArgs>
-                            <arg>-parameters</arg>
-                            <arg>--enable-preview</arg>
-                        </compilerArgs>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
@@ -683,11 +716,11 @@
                             </path>
                             <path>
                                 <groupId>io.micronaut</groupId>
-                                <artifactId>micronaut-inject-java</artifactId>
+                                <artifactId>micronaut-inject</artifactId>
                                 <version>${micronaut.version}</version>
                             </path>
                             <path>
-                                <groupId>io.micronaut</groupId>
+                                <groupId>io.micronaut.validation</groupId>
                                 <artifactId>micronaut-validation</artifactId>
                                 <version>${micronaut.version}</version>
                             </path>
@@ -700,10 +733,6 @@
                                 <goal>testCompile</goal>
                             </goals>
                             <configuration>
-                                <compilerArgs>
-                                    <arg>-parameters</arg>
-                                    <arg>--enable-preview</arg>
-                                </compilerArgs>
                                 <annotationProcessorPaths>
                                     <path>
                                         <groupId>org.projectlombok</groupId>
@@ -716,7 +745,7 @@
                                         <version>${micronaut.version}</version>
                                     </path>
                                     <path>
-                                        <groupId>io.micronaut</groupId>
+                                        <groupId>io.micronaut.validation</groupId>
                                         <artifactId>micronaut-validation</artifactId>
                                         <version>${micronaut.version}</version>
                                     </path>
